little bit change

--- a/src/a1_joystick/package.xml
+++ b/src/a1_joystick/package.xml
@@ -4,7 +4,7 @@
   <version>1.0.0</version>
   <description>The a1_joystick package</description>
 
-  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>
+  <maintainer email="didik@student.undip.ac.id">didik</maintainer>
 
   <license>MIT</license>
 
